--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
             <div class="container">
                 <!-- Nombre de la app -->
                 <a class="navbar-brand fw-bold text-primary" asp-area="" asp-page="/Index">
-                    🐶 ComederoPetWeb
+                    🐶 Fionna
                 </a>
 
                 <!-- Botón hamburguesa -->
